Add data, feature engineering, initlal model-building

--- a/Basketball Analytics/Basketball.ipynb
+++ b/Basketball Analytics/Basketball.ipynb
@@ -804,6 +804,7 @@
    "source": [
     "output = pd.DataFrame()\n",
     "output['Game_ID'] = list(set(lineup_df['Game_id']))\n",
+    "output['Game_']\n",
     "# output.to_csv('Columbia_Team_H_Q1_BBALL.csv')\n"
    ]
   },
