trying various new models

--- a/Business Analytics/Business.ipynb
+++ b/Business Analytics/Business.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,10 @@
     "from sklearn import datasets, linear_model\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -39,7 +42,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -75,7 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# major rivalries aquired by Wikipedia\n",
+    "rivalry = [('CLE', 'GSW'), ('BOS', 'LAL'), ('LAL', 'DET'), ('PHI', 'BOS'), ('BOS', 'NYK'), \n",
+    "           ('NYK', 'BKN'), ('CHI', 'DET'), ('CHI', 'CLE'), ('CHI', 'MIA'), ('CHI', 'NYK'), \n",
+    "           ('BOS', 'DET'), ('MIA', 'NYK'), ('NYK', 'IND'), ('LAL', 'LAC'), ('DAL', 'HOU'),\n",
+    "           ('HOU', 'SAS'), ('UTA', 'HOU'), ('LAL', 'SAS'), ('SAS', 'PHX')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -91,7 +109,7 @@
    "source": [
     "# create training/test set for 2016 model, we add features to this later\n",
     "model_train_X = train_df[['Season', 'Game_ID', 'Game_Date', 'Away_Team', 'Home_Team']].drop_duplicates().reset_index(drop=True) \n",
-    "model_test_X = test_df[['Season', 'Game_ID', 'Game_Date', 'Away_Team', 'Home_Team']]\n",
+    "model_output_X = test_df[['Season', 'Game_ID', 'Game_Date', 'Away_Team', 'Home_Team']]\n",
     "\n",
     "games = list(model_train_X['Game_ID'])\n",
     "# add up total viewers for each game in training set\n",
@@ -99,12 +117,12 @@
     "for game in games:\n",
     "    model_train_y.append(sum(list(train_df.loc[train_df['Game_ID'] == game]['Rounded Viewers']))) \n",
     "    \n",
-    "print len(model_train_X), len(model_train_y), len(model_test_X)\n"
+    "print len(model_train_X), len(model_train_y), len(model_output_X)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -113,44 +131,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Season   Game_ID   Game_Date Away_Team Home_Team  Year  Home_All_Stars  \\\n",
-      "0  2016-17  21600001  10/25/2016       NYK       CLE     0             3.0   \n",
-      "1  2016-17  21600003  10/25/2016       SAS       GSW     0             4.0   \n",
-      "2  2016-17  21600002  10/25/2016       UTA       POR     0             0.0   \n",
+      "    Season   Game_ID   Game_Date Away_Team Home_Team  Year  Rivalry  \\\n",
+      "0  2016-17  21600001  10/25/2016       NYK       CLE     0        0   \n",
+      "1  2016-17  21600003  10/25/2016       SAS       GSW     0        0   \n",
+      "2  2016-17  21600002  10/25/2016       UTA       POR     0        0   \n",
       "\n",
-      "   Away_All_Stars  Home_Market_Size  Away_Market_Size  Home_Championships  \\\n",
-      "0             1.0            4053.0           19995.0                 1.0   \n",
-      "1             1.0            6750.0            2193.0                 4.0   \n",
-      "2             0.0            3010.0            2505.0                 1.0   \n",
+      "   Home_All_Stars  Away_All_Stars  Home_Market_Size  Away_Market_Size  \\\n",
+      "0             3.0             1.0            4053.0           19995.0   \n",
+      "1             4.0             1.0            6750.0            2193.0   \n",
+      "2             0.0             0.0            3010.0            2505.0   \n",
       "\n",
-      "   Away_Championships  Home_Playoffs  Away_Playoffs  Home_Twitter  \\\n",
-      "0                 2.0            7.0            5.0         1.138   \n",
-      "1                 5.0            5.0           16.0         1.688   \n",
-      "2                 0.0            9.0            8.0         0.576   \n",
+      "   Home_Championships  Away_Championships  Home_Playoffs  Away_Playoffs  \\\n",
+      "0                 1.0                 2.0            7.0            5.0   \n",
+      "1                 4.0                 5.0            5.0           16.0   \n",
+      "2                 1.0                 0.0            9.0            8.0   \n",
       "\n",
-      "   Away_Twitter  Home_Win_Pct  Away_Win_Pct  \n",
-      "0         1.393           0.0           0.0  \n",
-      "1         1.278           0.0           0.0  \n",
-      "2         0.455           0.0           0.0  \n",
-      "    Season   Game_ID   Game_Date Away_Team Home_Team  Year  Home_All_Stars  \\\n",
-      "0  2016-17  21600010  10/26/2016       DEN       NOP     0             1.0   \n",
-      "1  2016-17  21600023  10/28/2016       HOU       DAL     0             0.0   \n",
-      "2  2016-17  21600027  10/29/2016       BOS       CHA     0             1.0   \n",
+      "   Home_Twitter  Away_Twitter  Home_Win_Pct  Away_Win_Pct  \n",
+      "0         1.138         1.393           0.0           0.0  \n",
+      "1         1.688         1.278           0.0           0.0  \n",
+      "2         0.576         0.455           0.0           0.0  \n",
+      "    Season   Game_ID   Game_Date Away_Team Home_Team  Year  Rivalry  \\\n",
+      "0  2016-17  21600010  10/26/2016       DEN       NOP     0        0   \n",
+      "1  2016-17  21600023  10/28/2016       HOU       DAL     0        1   \n",
+      "2  2016-17  21600027  10/29/2016       BOS       CHA     0        0   \n",
       "\n",
-      "   Away_All_Stars  Home_Market_Size  Away_Market_Size  Home_Championships  \\\n",
-      "0             0.0            1559.0            3921.0                 0.0   \n",
-      "1             1.0            7090.0            6579.0                 1.0   \n",
-      "2             1.0            3462.0            6448.0                 0.0   \n",
+      "   Home_All_Stars  Away_All_Stars  Home_Market_Size  Away_Market_Size  \\\n",
+      "0             1.0             0.0            1559.0            3921.0   \n",
+      "1             0.0             1.0            7090.0            6579.0   \n",
+      "2             1.0             1.0            3462.0            6448.0   \n",
       "\n",
-      "   Away_Championships  Home_Playoffs  Away_Playoffs  Home_Twitter  \\\n",
-      "0                 0.0            6.0           10.0         0.457   \n",
-      "1                 2.0           15.0            9.0         0.879   \n",
-      "2                17.0            5.0           12.0         0.516   \n",
+      "   Home_Championships  Away_Championships  Home_Playoffs  Away_Playoffs  \\\n",
+      "0                 0.0                 0.0            6.0           10.0   \n",
+      "1                 1.0                 2.0           15.0            9.0   \n",
+      "2                 0.0                17.0            5.0           12.0   \n",
       "\n",
-      "   Away_Twitter  Home_Win_Pct  Away_Win_Pct  \n",
-      "0         0.476           0.0           0.0  \n",
-      "1         0.985           0.0           0.0  \n",
-      "2         1.863           1.0           0.5  \n"
+      "   Home_Twitter  Away_Twitter  Home_Win_Pct  Away_Win_Pct  \n",
+      "0         0.457         0.476           0.0           0.0  \n",
+      "1         0.879         0.985           0.0           0.0  \n",
+      "2         0.516         1.863           1.0           0.5  \n"
      ]
     }
    ],
@@ -161,13 +179,15 @@
     "            'Home_Twitter', 'Away_Twitter', 'Home_Win_Pct', 'Away_Win_Pct']\n",
     "\n",
     "model_train_X['Year'] = 0\n",
-    "model_test_X['Year'] = 0\n",
+    "model_train_X['Rivalry'] = 0\n",
+    "model_output_X['Year'] = 0\n",
+    "model_output_X['Rivalry'] = 0\n",
     "\n",
     "for c in cols:\n",
     "    model_train_X[c] = 0.0\n",
-    "    model_test_X[c] = 0.0\n",
+    "    model_output_X[c] = 0.0\n",
     "    model_train_X[c] = 0.0\n",
-    "    model_test_X[c] = 0.0\n",
+    "    model_output_X[c] = 0.0\n",
     "    \n",
     "metrics = ['Market_Size', 'Championships', 'Playoffs', 'Twitter']\n",
     "\n",
@@ -230,6 +250,10 @@
     "            set_X.at[i, 'Year'] = 0\n",
     "        elif (set_X['Season'][i] == '2017-18'):\n",
     "            set_X.at[i, 'Year'] = 1\n",
+    "            \n",
+    "        # add in if there was a rivalry as a binary feature\n",
+    "        if ((h_team, a_team) in rivalry) or ((a_team, h_team) in rivalry):\n",
+    "            set_X.at[i, 'Rivalry'] = 1\n",
     "        \n",
     "        # print game, h_team, a_team, h_all_stars, a_all_stars, h_pct, a_pct\n",
     "        \n",
@@ -238,38 +262,61 @@
     "    print set_X[0:3]\n",
     "\n",
     "add_features(model_train_X, len(model_train_X))\n",
-    "add_features(model_test_X, len(model_test_X))\n"
+    "add_features(model_output_X, len(model_output_X))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.410535118245\n"
+      "    Season   Game_ID   Game_Date Away_Team Home_Team  Year  Rivalry  \\\n",
+      "0  2016-17  21600001  10/25/2016       NYK       CLE     0        0   \n",
+      "1  2016-17  21600003  10/25/2016       SAS       GSW     0        0   \n",
+      "2  2016-17  21600002  10/25/2016       UTA       POR     0        0   \n",
+      "\n",
+      "   Home_All_Stars  Away_All_Stars  Home_Market_Size  Away_Market_Size  \\\n",
+      "0             3.0             1.0            4053.0           19995.0   \n",
+      "1             4.0             1.0            6750.0            2193.0   \n",
+      "2             0.0             0.0            3010.0            2505.0   \n",
+      "\n",
+      "   Home_Championships  Away_Championships  Home_Playoffs  Away_Playoffs  \\\n",
+      "0                 1.0                 2.0            7.0            5.0   \n",
+      "1                 4.0                 5.0            5.0           16.0   \n",
+      "2                 1.0                 0.0            9.0            8.0   \n",
+      "\n",
+      "   Home_Twitter  Away_Twitter  Home_Win_Pct  Away_Win_Pct  \n",
+      "0         1.138         1.393           0.0           0.0  \n",
+      "1         1.688         1.278           0.0           0.0  \n",
+      "2         0.576         0.455           0.0           0.0  \n"
      ]
     }
    ],
    "source": [
-    "# subset dataset\n",
+    "# subsetting the training dataset\n",
+    "print model_train_X[0:3]\n",
+    "drop_cols = ['Season', 'Game_ID','Game_Date', 'Away_Team', 'Home_Team']\n",
     "\n",
-    "drop_cols = ['Season', 'Game_Date', 'Away_Team', 'Home_Team']\n",
+    "# make train set of 1200\n",
+    "model_sub_X = model_train_X.drop(drop_cols, axis=1)[0 : 1500]\n",
+    "model_sub_y = model_train_y[0 : 1500]\n",
     "\n",
-    "train_size = int(0.75 * len(model_train_X))\n",
+    "# make validation set that we will use to optimise our model\n",
+    "model_val_X = model_train_X.drop(drop_cols, axis=1)[1500 : 2000]\n",
+    "model_val_y = model_train_y[1500 : 2000]\n",
     "\n",
-    "model_sub_X = model_train_X.drop(drop_cols, axis=1)[0 : train_size]\n",
-    "model_sub_y = model_train_y[0 : train_size]\n",
-    "model_val_X = model_train_X.drop(drop_cols, axis=1)[train_size : ]\n",
-    "model_val_y = model_train_y[train_size : ]\n"
+    "# make test set that we won't touch until we're completely done\n",
+    "model_test_X = model_train_X.drop(drop_cols, axis=1)[1600 : ]\n",
+    "model_test_y = model_train_y[1600 : ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -285,18 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.41053511824578176"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 17343.4577342   14929.47494793  20616.01329005]\n",
+      "[15158, 12349, 17122]\n",
+      "0.631129994089\n",
+      "0.348098673079\n"
+     ]
     }
    ],
    "source": [
@@ -305,44 +352,63 @@
     "reg = linear_model.LinearRegression()\n",
     "reg.fit(model_sub_X, model_sub_y)\n",
     "model_val_pred = reg.predict(model_val_X)\n",
+    "print model_val_pred[0:3]\n",
+    "print model_val_y[0:3]\n",
     "\n",
-    "mape(model_val_pred, model_val_y)"
+    "print mape(model_val_pred, model_val_y)\n",
+    "print r2_score(model_val_y, model_val_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.11721762  0.          0.06231972  0.11093079  0.06746491  0.06751766\n",
-      "  0.07115561  0.          0.09388635  0.09829155  0.09653226  0.02899225\n",
-      "  0.1228116   0.06287966]\n"
+      "['Year', 'Rivalry', 'Home_All_Stars', 'Away_All_Stars', 'Home_Market_Size', 'Away_Market_Size', 'Home_Championships', 'Away_Championships', 'Home_Playoffs', 'Away_Playoffs', 'Home_Twitter', 'Away_Twitter', 'Home_Win_Pct', 'Away_Win_Pct']\n",
+      "[ 0.01136299  0.00765029  0.1533608   0.24872643  0.03476273  0.02926996\n",
+      "  0.01881039  0.02741924  0.01881583  0.02007946  0.09460584  0.08445324\n",
+      "  0.12585543  0.12482736]\n",
+      "[ 10898.58982599  14809.10302813  13575.48324672] [15158, 12349, 17122]\n",
+      "0.505964676605\n",
+      "0.531104385885\n",
+      "[ 9587 10052 11563] [15158, 12349, 17122]\n",
+      "0.588333110667\n",
+      "0.139321413023\n",
+      "[ 14615.27408585  14617.83495799  14615.32939243] [15158, 12349, 17122]\n",
+      "0.740152655462\n",
+      "-0.00276369397916\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.536386247153955"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# random forest\n",
+    "def reg_model(model):\n",
+    "    reg = model\n",
+    "    reg.fit(model_sub_X, model_sub_y)\n",
+    "    model_val_pred = reg.predict(model_val_X)\n",
+    "    print model_val_pred[0:3], model_val_y[0:3]\n",
+    "    print mape(model_val_pred, model_val_y)\n",
+    "    print r2_score(model_val_y, model_val_pred)\n",
+    "    return None\n",
     "\n",
-    "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
-    "clf.fit(model_sub_X, model_sub_y)\n",
-    "print(clf.feature_importances_)\n",
-    "model_val_pred = clf.predict(model_val_X)\n",
+    "#random forest\n",
+    "reg = RandomForestRegressor(max_depth=10, random_state=0)\n",
+    "reg.fit(model_sub_X, model_sub_y)\n",
+    "print list(model_sub_X)\n",
+    "print(reg.feature_importances_)\n",
+    "model_val_pred = reg.predict(model_val_X)\n",
+    "print model_val_pred[0:3], model_val_y[0:3]\n",
+    "print mape(model_val_pred, model_val_y)\n",
+    "print r2_score(model_val_y, model_val_pred)\n",
     "\n",
-    "mape(model_val_pred, model_val_y)"
+    "# naive bayes\n",
+    "reg_model(GaussianNB())\n",
+    "\n",
+    "# support vector machine\n",
+    "reg_model(SVR(C=1.0, epsilon=0.2))"
    ]
   },
   {
@@ -352,13 +418,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# major rivalries aquired by wikipedia\n",
-    "rivalry = [('CLE', 'GSW'), ('BOS', 'LAL'), ('LAL', 'DET'), ('PHI', 'BOS'), ('BOS', 'NYK'), \n",
-    "           ('NYK', 'BKN'), ('CHI', 'DET'), ('CHI', 'CLE'), ('CHI', 'MIA'), ('CHI', 'NYK'), \n",
-    "           ('BOS', 'DET'), ('MIA', 'NYK'), ('NYK', 'IND'), ('LAL', 'LAC'), ('DAL', 'HOU'),\n",
-    "           ('HOU', 'SAS'), ('UTA', 'HOU'), ('LAL', 'SAS'), ('SAS', 'PHX')]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
