output new features

--- a/Business Analytics/Business.ipynb
+++ b/Business Analytics/Business.ipynb
@@ -314,6 +314,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Season', 'Game_ID', 'Game_Date', 'Away_Team', 'Home_Team', 'Year', 'Rivalry', 'Day_Code', 'Holiday', 'First', 'Last', 'Home_All_Stars', 'Away_All_Stars', 'Home_Market_Size', 'Away_Market_Size', 'Home_Championships', 'Away_Championships', 'Home_Playoffs', 'Away_Playoffs', 'Home_Twitter', 'Away_Twitter', 'Home_Win_Pct', 'Away_Win_Pct', 'Total_Viewers']\n",
+      "['Season', 'Game_ID', 'Game_Date', 'Away_Team', 'Home_Team', 'Year', 'Rivalry', 'Day_Code', 'Holiday', 'First', 'Last', 'Home_All_Stars', 'Away_All_Stars', 'Home_Market_Size', 'Away_Market_Size', 'Home_Championships', 'Away_Championships', 'Home_Playoffs', 'Away_Playoffs', 'Home_Twitter', 'Away_Twitter', 'Home_Win_Pct', 'Away_Win_Pct', 'Total_Viewers']\n"
+     ]
+    }
+   ],
+   "source": [
+    "neil_train = model_train_X\n",
+    "neil_train['Total_Viewers'] = model_train_y\n",
+    "print list(neil_train)\n",
+    "neil_test = model_output_X\n",
+    "neil_test['Total_Viewers'] = \"\"\n",
+    "print list(neil_test)\n",
+    "neil_train.to_csv('neil_train.csv')\n",
+    "neil_test.to_csv('neil_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "scrolled": true
@@ -558,6 +583,15 @@
     "print new_df[0:3]\n",
     "new_df.to_csv('test_set_Columbia.csv')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
